--- a/index.html
+++ b/index.html
@@ -5,26 +5,27 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Recipe App</title>
-        <link
-            rel="stylesheet"
-            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css"
-        />
+        <link rel="stylesheet" 
+            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css">
         <link rel="stylesheet" href="style.css">
         <script src="script.js" defer></script>
     </head>
     <body>
-        <div class="mobile-container">
+        <div class="page-container">
             <header>
+                <button id="home"><i class="fas fa-home"></i></button>
                 <input type="text" id="search-term">
-                <button id="search"><i class="fas fa-search"></i></button>
+                <button id="search"><i class="fa fa-search" aria-hidden="true"></i>
+                </button>
+                <button class="fav-list">
+                    <i class="fas fa-heart"></i>
+                </button> 
             </header>
-            <div class="fav-container">
-                <h3>Favourite Meals</h3>
-                <ul class="fav-meals" id ="fav-meals"></ul>
+            <div class="categories-container">
+                <ul class="categories" id ="categories"></ul>
             </div>
             <div class="meals" id="meals"></div>
         </div>
-
         <div class="popup-container hidden" id="meal-popup">
             <div class="popup">
                 <button id="close-popup" class="close-popup">
